# projectwise_server

./: .dockerignore  .env_example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: Arsitektur_Issue.md  DOCKER.md  Daftar_testing.md  ROADMAP.md  TOOLS_FORMAT.md  entrypoint_template.sh  sync_vs_async.md  tech_stack_plan.md
mcp_server/: server.py  settings.py
mcp_server/api/: app_kak_pipeline.py  app_product_pipeline.py  check_status_ingestion.py
mcp_server/data/: ingested_manifest.json  ingestion_status.json
mcp_server/data/kak_tor_md/: forti_sandboxing_pt_bukit_asam.md  switch_core_bank_sumsel_babel.md
mcp_server/data/summaries/: bank_sumsel_switch_core.md  forti_sandboxing_bukit_asam_20250715_124646.md  forti_sandboxing_pt_bukit_asam_20250714_225123.md  forti_sandboxing_pt_bukit_asam_20250715_122213.md  fortinet_sandboxing_pt_bukit_asam_20250716_012008.md  fortinet_sandboxing_pt_bukit_asam_20250716_012025.md  proyek_summary.md  summary_20250714_013042.md  summary_20250714_223428.md  summary_20250714_224511.md  summary_20250715_013406.md  summary_20250715_014853.md  summary_20250715_015555.md  summary_20250716_011230.md  switch_core_bank_sumsel_babel_20250714_012113.md  switch_core_bank_sumsel_babel_20250714_212950.md
mcp_server/data/templates/prompts/: document_generator.txt  (+2 more)
mcp_server/tools/: docgen_product_tools.py  docx_tools.py  rag_tools.py
mcp_server/utils/: docx_generator.py  helper.py  llm_chains.py  logger.py  rag_pipeline.py  schemas.py  status_tracker.py
repo-backup.git/: config  packed-refs
(+16 files in other folders)
