[project]
name = "projectwise_server"
version = "0.1.0"
description = "MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.40.0",
    "docxtpl>=0.20.0",
    "lancedb>=0.24.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "mcp[cli]>=1.10.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.93.0",
    "pyarrow>=14.0.0",
]
